# misc

./: GCC_ENV  README.md
OpenGL/: Makefile  glad.c  hello.cpp  version.c
OpenGL/shader/: Makefile  shader1  shader2  shader2.cpp  shader3  shader3.cpp
OpenGL/triangle/: Makefile  triangle.cpp  triangle2.cpp  triangle3.cpp  triangle4.cpp  triangle5.cpp  triangle6.cpp
WebServer/: app.py  hello.py  server.py
WebServer/templates/: home.html  signin-ok.html
build_scripts/: libvirt_build_rpm.sh
centos_yumrepo/: CentOS-Vault.repo  nux-dextop.repo
coroutine/assemble_demo/: Makefile  main.c  save_restore.S  test_save_restore.c
coroutine/qemu_demo/: Makefile  coroutine.c  coroutine.h  main.c  queue.h
coroutine/ucontext_demo/: Makefile  coroutine.c  coroutine.h  main.c
cpuinfo/: Makefile  cpuid.c  cpuinfo.S  test_cpuinfo.c
ctc_device/guest/: Makefile  testdev-drv.c
ctc_device/host/: ctcdev.c  ctcdev.patch
dbus/: Makefile  demo1.c  demo1.conf  demo2_client.c  demo2_server.c  demo3.c  run_demo1.sh  run_demo2.sh  run_demo3.sh
event_monitor/: gvm-conf.sh  gvm-event-monitor.c  gvm-event-monitor.h  gvm-event-monitor.service  meson.build
event_monitor/include/: cJSON.h  jsonrpc-c.h  jsonrpc-s.h  misc.h
event_monitor/util/: jsonrpc-c.c  jsonrpc-s.c  misc.c
eventfd/: Makefile  main.c
glib_event/: Makefile  demo1.c  demo2.c  poll_demo.c  qemu_main_loop.c  run_demo1.sh  run_demo2.sh
glib_event/glib_unref_bugfix/: 0001-glib-debugging-patch-for-g_source_iter_next-refcount.patch  README  glib-unref-reproducer.py
go_demo/: Makefile  empty_interface.go  md5.go  regexp.go
hello/: Makefile  hello.c  hello_another.c
ivshmem/: Makefile  read_shared_memory.c
ivshmem/guest/: Makefile  ivshmem-drv.c
libtool/: Makefile  compress.c  libzlibagent.c  main.c  ml_main.c  zlib.c
network_scripts/: downtime.sh  net_loss_rate_ip.sh  plot_net_loos.py
oracle_rac/: db_install.rsp  dbca.rsp  gridsetup.rsp  hy_c7_node3.xml  hy_c7_node4.xml
powershell_virtio_scirpts/: DriverInstaller.ps1  VirtIODriverSigner.ps1  enable_debug.patch
qemu_bh/: Makefile  aio.c  aio.h  async.c  async.h  atomic.h  event_notifier.c  event_notifier.h  futex.h  lockcnt.c  qemu_main_loop.c  util.h
qemu_migrate_scripts/: initrd-stress.img  migrate_from.sh  migrate_to.sh  vm.sh
sm4_crypt/: Makefile  sm4_gcrypt.c  sm4_test.c
vfio_work/: Makefile  demo.c
x509_demo/: cert_setup_example.sh
